--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,57 @@
+//apply plugin: 'java'
+//apply plugin: 'application'
+//apply plugin: 'idea'
+//apply plugin: 'org.springframework.boot'
+//apply plugin: 'io.spring.dependency-management'
+//
+//mainClassName = 'main.java.application.Application'
+//
+//buildscript {
+//    repositories {
+//        mavenCentral()
+//    }
+//    dependencies {
+//        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE")
+//    }
+//}
+//
+//
+//repositories {
+//    mavenCentral()
+//}
+//
+//dependencies {
+//    compile("org.springframework.boot:spring-boot-starter-web")
+//    compile group: 'org.springframework', name: 'spring-web', version: '5.1.3.RELEASE'
+//}
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE")
+    }
+}
+
 apply plugin: 'java'
-apply plugin: 'application'
+apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
-
-mainClassName = 'main.java.application.gradlehelloworld.HelloWorld'
-
+bootJar {
+    baseName = 'gs-rest-service'
+    version =  '0.1.0'
+}
 
 repositories {
     mavenCentral()
 }
 
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+dependencies {
+    compile("org.springframework.boot:spring-boot-starter-web")
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+}
