--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'idea'
+apply plugin: 'application'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
@@ -47,16 +48,16 @@ bootJar {
 repositories {
     mavenCentral()
 }
-
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
     // https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
     compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
-    // https://mvnrepository.com/artifact/javax.xml.ws/jaxws-api
+    compile('org.apache.shiro:shiro-spring:1.2.4')
+//    compile("org.springframework.boot:spring-boot-starter-web")
     compile group: 'javax.xml.ws', name: 'jaxws-api', version: '2.3.1'
-
-    compile("org.springframework.boot:spring-boot-starter-web")
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile group: 'org.springframework.boot', name: 'spring-boot', version: '2.1.1.RELEASE'
+    compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.1.3.RELEASE'
+    compile 'mysql:mysql-connector-java'
 }
