--- a/build.gradle
+++ b/build.gradle
@@ -1,44 +1,24 @@
-//apply plugin: 'java'
-//apply plugin: 'application'
-//apply plugin: 'idea'
-//apply plugin: 'org.springframework.boot'
-//apply plugin: 'io.spring.dependency-management'
-//
-//mainClassName = 'main.java.application.Application'
-//
-//buildscript {
-//    repositories {
-//        mavenCentral()
-//    }
-//    dependencies {
-//        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE")
-//    }
-//}
-//
-//
-//repositories {
-//    mavenCentral()
-//}
-//
-//dependencies {
-//    compile("org.springframework.boot:spring-boot-starter-web")
-//    compile group: 'org.springframework', name: 'spring-web', version: '5.1.3.RELEASE'
-//}
-
 buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE")
-    }
+	ext {
+		springBootVersion = '2.0.3.RELEASE'
+	}
+	repositories {
+    	mavenCentral()
+		maven { url "https://repo.spring.io/snapshot" }
+		maven { url "https://repo.spring.io/milestone" }
+	   maven { url "http://maven.geomajas.org" }
+        maven { url "http://repo.spring.io/plugins-release" }
+
+     	}
+	dependencies {
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+	}
 }
 
 apply plugin: 'java'
-apply plugin: 'idea'
-apply plugin: 'application'
-apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+ 
+apply plugin: 'org.springframework.boot'
 
 bootJar {
     baseName = 'gs-rest-service'
@@ -54,10 +34,17 @@ targetCompatibility = 1.8
 dependencies {
     // https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
     compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
+    // https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api
+    compile group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
+
+    // https://mvnrepository.com/artifact/org.springframework/spring-web
+    compile group: 'org.springframework', name: 'spring-web', version: '5.1.3.RELEASE'
+
     compile('org.apache.shiro:shiro-spring:1.2.4')
 //    compile("org.springframework.boot:spring-boot-starter-web")
     compile group: 'javax.xml.ws', name: 'jaxws-api', version: '2.3.1'
     compile group: 'org.springframework.boot', name: 'spring-boot', version: '2.1.1.RELEASE'
     compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.1.3.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: '2.1.1.RELEASE'
     compile 'mysql:mysql-connector-java'
 }
