--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '2.0.3.RELEASE'
+		springBootVersion = '2.1.1.RELEASE'
 	}
 	repositories {
     	mavenCentral()
@@ -17,9 +17,11 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'io.spring.dependency-management'
- 
 apply plugin: 'org.springframework.boot'
+apply plugin: 'application'
+apply plugin: 'idea'
 
+mainClassName = 'main.java.application.Application'
 bootJar {
     baseName = 'gs-rest-service'
     version =  '0.1.0'
@@ -40,11 +42,12 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework/spring-web
     compile group: 'org.springframework', name: 'spring-web', version: '5.1.3.RELEASE'
 
-    compile('org.apache.shiro:shiro-spring:1.2.4')
+//    compile('org.apache.shiro:shiro-spring:1.2.4')
 //    compile("org.springframework.boot:spring-boot-starter-web")
     compile group: 'javax.xml.ws', name: 'jaxws-api', version: '2.3.1'
     compile group: 'org.springframework.boot', name: 'spring-boot', version: '2.1.1.RELEASE'
     compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.1.3.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: '2.1.1.RELEASE'
     compile 'mysql:mysql-connector-java'
+    compile group: 'org.springframework', name: 'spring-beans', version: '5.1.3.RELEASE'
 }
