--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'idea'
 
 group = 'sharif'
 version = '0.0.1-SNAPSHOT'
@@ -25,8 +26,22 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	implementation 'org.springframework:spring-jcl'
+	implementation 'org.springframework.boot:spring-boot-test'
+	implementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	testCompile "org.mockito:mockito-inline:+"
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'mysql:mysql-connector-java'
+
+	testImplementation(
+			'org.junit.jupiter:junit-jupiter-api:5.1.0'
+	)
+	testRuntimeOnly(
+			'org.junit.jupiter:junit-jupiter-engine:5.1.0'
+	)
+	testCompile group: 'com.h2database', name: 'h2', version: '1.4.197'
+
 }
+
