--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/TaskManagerDB
-spring.datasource.username=TMUser
-spring.datasource.password=123456789
+spring.datasource.username=root
+spring.datasource.password=
