--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,18 @@ services:
   - mysql
 before_install:
   - mysql -e 'CREATE DATABASE IF NOT EXISTS TaskManagerDB;'
+
+env:
+  global:
+    CC_TEST_REPORTER_ID=f2872133aec3ae9fffa50afbafa06f84b7f12546b35059f3a98493a0b68b11ec
+
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+
+script:
+  - bundle exec rspec
+  -
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
