--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,10 @@ before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
+  - chmod +x ./gradlew
 
-
-after_script:
+script:
+  - ./gradlew check
+  - ./gradlew codeCoverageReport
+after_success:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
