--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'idea'
+apply plugin: 'jacoco'
 
 group = 'sharif'
 version = '0.0.1-SNAPSHOT'
@@ -45,3 +46,11 @@ dependencies {
 
 }
 
+jacocoTestReport {
+	reports {
+		xml.enabled true
+		html.enabled false
+	}
+}
+
+check.dependsOn jacocoTestReport
