--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,9 @@ env:
 test:
   post:
     - if [ -e ./gradlew ]; then ./gradlew jacocoTestReport;else gradle jacocoTestReport;fi
-    - bash <(curl -s https://codecov.io/bash)
+
 
 before_script:
   - chmod +x ./gradlew
-
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
