--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,5 @@ before_script:
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - ./cc-test-reporter format-coverage -d -t jacoco /build/report/jacoco/test/jacocoTestReport.xm
+  - ./cc-test-reporter format-coverage -d 
