--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: java
-dist: xenial
 services:
   - mysql
 before_install:
@@ -15,6 +14,7 @@ test:
 
 
 before_script:
+  - chmod +x ./gradlew
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
@@ -23,4 +23,3 @@ after_success:
   - bash <(curl -s https://codecov.io/bash)
   - ./cc-test-reporter format-coverage -d -t jacoco ./build/reports/jacoco/test/jacocoTestReport.xml
   - ./cc-test-reporter format-coverage -d
-
